<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:letterSpacing="0.1"
                    android:text="@string/name"
                    android:textColor="@color/offWhite"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/noto_sans_bold"
                    android:letterSpacing="0.05"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="bottom | right">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/ClickableViewCircle"
                    android:src="@drawable/search" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1.4"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/top_categories"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.5"
                    android:gravity="right"
                    android:clickable="true"
                    android:theme="@style/ClickableView"
                    android:focusable="true"
                    android:text="@string/view_all"
                    android:textColor="#D1D0D0"
                    android:textSize="14sp"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_gravity="bottom"
                    android:clickable="true"
                    android:theme="@style/ClickableViewCircle"
                    android:focusable="true"
                    android:layout_marginStart="5dp"
                    android:layout_weight="0.5"
                    android:src="@drawable/arrowright" />


            </LinearLayout>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1.4"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/hot_deals"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.5"
                    android:gravity="right"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/view_all"
                    android:theme="@style/ClickableView"
                    android:textColor="#D1D0D0"
                    android:textSize="14sp"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_gravity="bottom"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/ClickableViewCircle"
                    android:layout_marginStart="5dp"
                    android:layout_weight="0.5"
                    android:src="@drawable/arrowright" />


            </LinearLayout>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/deals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="5dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>